Add: login form error message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,11 @@
     <% if (user) {%>
         <h1>WELCOME BACK <%= user.username %>
         </h1>
-        <a href="/log-out">LOG OUT</a>
+        <!-- <a href="/logout">LOG OUT</a> -->
+        <button onclick="window.location.href='/logout'">LOG OUT</button>
         <% } else { %>
             <h1>please log in</h1>
-            <form action="/log-in" method="POST">
+            <form action="/login" method="POST">
                 <label for="username">Username</label>
                 <input name="username" placeholder="username" type="text" />
                 <label for="password">Password</label>
@@ -21,6 +22,9 @@
                 <button>Log In</button>
             </form>
             <%}%>
+                <br>
+                <button onclick="window.location.href='/'">Home</button>
+
 </body>
 
 </html>
