--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,8 +22,13 @@
                 <button>Log In</button>
             </form>
             <%}%>
-                <br>
-                <button onclick="window.location.href='/'">Home</button>
+                <% if(errorMessage) { %>
+                    <p style="color: red;">
+                        <%=errorMessage %>
+                    </p>
+                    <% } %>
+                        <br>
+                        <button onclick="window.location.href='/'">Home</button>
 
 </body>
 
