Add: Username On Display All Messages

--- a/views/loggedin.ejs
+++ b/views/loggedin.ejs
@@ -17,7 +17,7 @@
                     <strong>
                         <%= message.title %>
                     </strong><br>
-                    <em>From: <%= message.user.username %> <br> On - <%= message.timestamp %></em><br>
+                    <em>From: <%= message.user.name %> <br> On - <%= message.timestamp %></em><br>
                     <%= message.text %>
                 </li>
                 <% }); %>
