--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -15,8 +15,8 @@
             </p>
             <% } %>
                 <h1>Sign Up</h1>
-                <label for="name">name</label>
-                <input name="name" placeholder="name" type="text" />
+                <label for="name">Username</label>
+                <input name="name" placeholder="Enter Your Username" type="text" />
                 <br>
                 <label for="email">Email</label>
                 <input name="email" placeholder="test@test.com" type="email" />
