Add: Styles on messages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,22 @@
-<h1>Welcome to the site</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<h3>Select your option</h3>
-<!-- <a href="/login">Login</a> -->
-<button onclick="window.location.href='/login'">Login</button>
-<br>
-<br>
-<!-- <a href="/signup">Signup</a> -->
-<button onclick="window.location.href='/signup'">Signup</button>
+<head>
+    <meta charset="UTF-8" />
+    <title>Home</title>
+    <link rel="stylesheet" href="/home.css">
+</head>
+
+
+<body>
+    <h1>Welcome to the message board</h1>
+    <h3>Select your option</h3>
+    <!-- <a href="/login">Login</a> -->
+    <button onclick="window.location.href='/login'">Login</button>
+    <br>
+    <br>
+    <!-- <a href="/signup">Signup</a> -->
+    <button onclick="window.location.href='/signup'">Signup</button>
+</body>
+
+</html>
