Fix: timestamp on messages

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -15,16 +15,12 @@
 
 <body>
     <h1>Welcome <%= user.name %>!</h1>
-    <form action="/logout" method="get" class="logout-btn">
-        <button type="submit">Logout</button>
-    </form>
-    <br>
-    <form action="/" method="get" class="home-btn">
-        <button type="home">Home</button>
-    </form>
+
 
     <!-- Button to toggle the message form -->
     <button onclick="toggleForm()">Post a Message</button>
+    <button class="right" onclick="window.location.href='/logout'">Logout</button>
+    <button class="right" onclick="window.location.href='/'">Home</button>
 
     <!-- Form to post messages -->
     <form id="postForm" action="/postmessage" method="POST" class="form-style">
