--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,8 @@
                             <input name="password" placeholder="Password" type="password" />
                             <div class="button-group">
                                 <button>Log In</button>
-                                <button onclick="window.location.href='/'">Home</button>
+                                <!-- <button onclick="window.location.href='/'" type="submit">Home</button> -->
+                                <a href="/" class="home-button">Home</a>
                                 <div>
     </form>
 </body>
