--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,16 +38,18 @@
         <ul>
             <% messages.forEach(message=> { %>
                 <li>
-                    <strong>
-                        <%= message.title %>
-                    </strong><br>
-                    <%= message.text %>
-                        <br>
-                        <em><strong>Note: </strong>
-                            Become a member to get the sender's name and time
+                    <div class="message-box">
+                        <strong>
+                            <%= message.title %>
+                        </strong><br>
+                        <%= message.text %>
+                            <br>
+                            <em id="note"><strong>Note: </strong>
+                                Become a member to get the sender's name and time</em>
                 </li><br>
                 <% }); %>
         </ul>
+        </div>
         <% } else { %>
             <p>No messages available.</p>
             <% } %>
