--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -38,31 +38,26 @@
 
 
 
-    <!-- Display messages -->
-    <% if (errorMessage) { %>
-        <p>
-            <%= errorMessage %>
-        </p>
-        <% } %>
-
-            <% if (messages.length> 0) { %>
-                <h2 id="allmessage">Messages:</h2>
-                <ul>
-                    <% messages.forEach(message=> { %>
-                        <li>
-                            <strong>
-                                <%= message.title %>
-                            </strong><br>
-                            <em>From: <strong>
-                                    <%= message.user.name %>
-                                </strong><br> On - <%= message.timestamp %></em><br>
-                            <%= message.text %>
-                        </li><br>
-                        <% }); %>
-                </ul>
-                <% } else { %>
-                    <p>No messages available.</p>
-                    <% } %>
+    <% if (messages.length> 0) { %>
+        <h2 id="allmessage">Messages:</h2>
+        <ul>
+            <% messages.forEach(message=> { %>
+                <li>
+                    <div class="message-box">
+                        <strong>
+                            <%= message.title %>
+                        </strong><br>
+                        <%= message.text %><br>
+                            <em><strong>
+                                    From: <%= message.user.name %> <br>
+                                </strong> On - <%= message.timestamp %></em><br>
+                    </div>
+                </li>
+                <% }); %>
+        </ul>
+        <% } else { %>
+            <p>No messages available.</p>
+            <% } %>
 </body>
 
 </html>
